Mobile menu overflow fixed

--- a/src/styles/Navbar/Navbar.module.scss
+++ b/src/styles/Navbar/Navbar.module.scss
@@ -4,10 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 100vw;
+  width: 100vw;
   position: absolute;
-  width: 100%;
-  position: relative;
 }
 
 .logoWrapper {
@@ -94,7 +92,7 @@
 
   .mobileMenuIcon {
     display: block;
-    z-index: 1;
+    z-index: 12;
     position: absolute;
     top: 25px;
     right: 25px;
