--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,6 +66,11 @@ body {
 body {
   background-color: var(--primary-color);
   -webkit-font-smoothing: antialiased;
+  overflow: hidden !important;
+}
+
+main {
+  overflow: hidden !important;
 }
 
 .sectionPadding {
@@ -77,6 +82,6 @@ body {
 @media (max-width: 1100px) {
   .sectionPadding {
     padding: 0px var(--mobile-xl-padding);
-    margin: 0px var(--mobile-xl-margin);
+    margin: 0px 0px;
   }
 }
